# TexHive

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
api/: file_api.py
core/: __init__.py  config.py
core/utils/: ast_helpers.py  file_manager.py  github_processor.py  latex_compiler.py
frontend/: package.json
frontend/src/: App.js  index.js
frontend/src/components/: ContextMenu.js  Editor.js  FileExplorer.js  Header.js  PdfViewer.js  ThemeSelector.js
frontend/src/styles/: custom.css
k8s/: all.yaml  namespace.yaml
k8s/compile-service/: deployment.yaml  service.yaml
k8s/humanize-service/: deployment.yaml  service.yaml
k8s/ref-service/: deployment.yaml  service.yaml
k8s/texhive/: deployment.yaml  service.yaml
microservices/code_ref/: Dockerfile  github_processor.py  main.py  requirements.txt
microservices/humanize-service/: Dockerfile  humanize.js  index.js  package-lock.json  package.json
microservices/latex_compiler/: Dockerfile  config.py  file_manager.py  latex_compiler.py  main.py  requirements.txt
routes/: main.py
sockets/: events.py
src/pages/: Login.tsx
static/css/: custom.css  theme.css
static/js/: app.js  editor-header.js  firebase.js  header.js  projects.js  theme.js
static/templates/acm/: main.tex
static/templates/ams/: main.tex
static/templates/article/: main.tex
templates/: base.html  editor.html  index.html  login.html  projects.html
templates/partials/: content.html  context_menu.html  head.html  header.html  sidebar.html
(+6 files in other folders)
