[project]
name = "texhive"
version = "0.1.0"
description = "Collaborative Realtime Personalized Tex Editor with Github Integration"
authors = [
    {name = "Ajay Ratnam",email = "ajratnam.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tree-sitter (==0.21.3)",
    "tree-sitter-languages (>=1.10.2,<2.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "firebase_admin"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
